--- a/try_1.html
+++ b/try_1.html
@@ -2,131 +2,154 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>大连地铁房地产</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>大连地铁房地产</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page try1 tdc-detail">
+<div class="page try1 tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/style/tre_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/style/tre_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>大连地铁<br/>房地产</h3>
-              
-            </div>
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>大连地铁<br/>房地产</h3>
 
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+                    </div>
+
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">大连铁路房地产开发有限责任公司2006年6月成立，位于大连市中山区延安路49号。公司注册资金990万元，经营范围包括房屋开发与销售、铁路工程及项目建设管理。公司致力于商品住宅、保障房的开发与建设，成功开发了地处商业黄金地段的“双兴财富长街”、大连西站龙畔锦城住宅小区、铁路站北职工保障性住房等一批住宅小区和大连胜利桥北街区改造工程。目前正在开发建设的项目包括港湾隽景、沈铁铭悦。公司年销售收入8.1亿元，多次获得铁路系统重合同、守信用企业荣誉称号。
                 </span>
-              </p>
+                        </p>
+                    </div>
+
+                </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
+                            <div class="width-1-2" style="padding: 0 16px 0 0;">
+                                <div class="height-1-2" style="padding: 0 0 8px 0;">
+                                    <a href="images/try1/i2.jpg" data-lightbox="lightbox"><img
+                                            src="./images/try1/i2.jpg" class="img-fullw"
+                                            style=""></a>
+                                </div>
+                                <div class="height-1-2" style="padding: 8px 0 0 0;">
+                                    <a href="images/try1/i1.jpg" data-lightbox="lightbox"><img
+                                            src="./images/try1/i1.jpg" class="img-fullw"
+                                            style=""></a>
+                                </div>
+                            </div>
+
+                            <div class="width-1-2" style="padding: 0 16px 0 0;">
+                                <div class="width-2-3" style="padding: 0 16px 0 0;">
+                                    <a href="images/try1/i3.jpg" data-lightbox="lightbox"><img
+                                            src="./images/try1/i7.jpg" class="img-fullw"
+                                            style=""></a>
+                                </div>
+                                <div class="width-1-3" style="padding: 0;">
+                                    <div class="height-1-2" style="padding: 0 0 8px 0; ">
+                                        <div class="height-1-2" style="padding: 0 0 8px 0;">
+                                            <!--<a href="images/try1/i4.jpg" data-lightbox="lightbox"><img-->
+                                                    <!--src="./images/try1/i8.jpg" class=""-->
+                                                    <!--style=""></a>-->
+                                            <h1><font color="#ff8c00">没有图片</font></h1>
+                                        </div>
+                                        <div class="height-1-2" style="padding: 0 0 0 0;">
+                                            <!--<a href="images/try1/i4.jpg" data-lightbox="lightbox"><img-->
+                                                    <!--src="./images/try1/i8.jpg" class=""-->
+                                                    <!--style=""></a>-->
+                                            <h1><font color="#ff8c00">没有图片</font></h1>
+                                        </div>
+                                    </div>
+                                    <div class="height-1-2" style="padding: 0 0 8px 0; ">
+                                        <div class="height-1-2" style="padding: 0 0 8px 0;">
+                                            <!--<a href="images/try1/i4.jpg" data-lightbox="lightbox"><img-->
+                                                    <!--src="./images/try1/i8.jpg" class=""-->
+                                                    <!--style=""></a>-->
+                                            <h1><font color="#ff8c00">没有图片</font></h1>
+                                        </div>
+                                        <div class="height-1-2" style="">
+                                            <!--<a href="images/try1/i4.jpg" data-lightbox="lightbox"><img-->
+                                                    <!--src="./images/try1/i8.jpg" class=""-->
+                                                    <!--style=""></a>-->
+                                            <h1><font color="#ff8c00">没有图片</font></h1>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/try1/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try1/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/try1/i3.jpg"></div>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
             </div>
-
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="width-1-2" style="padding: 0 16px 0 0;">
-                  <div class="height-1-2" style="padding: 0 0 8px 0;">
-                  <a href="images/try1/i2.jpg" data-lightbox="lightbox"><img
-                          src="./images/try1/i2.jpg" class="img-fullw"
-                          style=""></a>
-                  </div>
-                  <div class="height-1-2" style="padding: 8px 0 0 0;">
-                  <a href="images/try1/i1.jpg" data-lightbox="lightbox"><img
-                          src="./images/try1/i1.jpg" class="img-fullw"
-                          style=""></a>
-                  </div>
-                </div>
-                <div class="width-1-4" style="padding: 0 16px 0 0;">
-                  <a href="images/try1/i3.jpg" data-lightbox="lightbox"><img
-                          src="./images/try1/i7.jpg" class="img-fullw"
-                          style=""></a>
-                </div>
-                <div class="width-1-4" style="padding: 0;">
-                  <div class="height-1-2" style="padding: 0 0 8px 0;">
-                  <a href="images/try1/i4.jpg" data-lightbox="lightbox"><img
-                          src="./images/try1/i8.jpg" class="img-fullh"
-                          style=""></a>
-                  </div>
-                  <div class="height-1-2" style="padding: 8px 0 0 0;">
-                  <a href="images/try1/i5.jpg" data-lightbox="lightbox"><img
-                          src="./images/try1/i9.jpg" class="img-fullh"
-                          style=""></a>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/try1/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/try1/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/try1/i3.jpg">	</div>
-
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-
         </div>
-      </div>
     </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/try1.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/try1.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
     <!-- Modal -->
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
