--- a/tss_13.html
+++ b/tss_13.html
@@ -2,130 +2,182 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>旅顺龙头生态种植养殖基地</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>旅顺龙头生态种植养殖基地</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-	<div id="preloader">
-		<div id="spinner_container">
-		<img id="spinner" src="images/lightbox/loading.gif" alt="" />
-		</div>
-	</div>
+<div id="preloader">
+    <div id="spinner_container">
+        <img id="spinner" src="images/lightbox/loading.gif" alt=""/>
+    </div>
+</div>
 
-  <div class="page tss13 tdc-detail">
+<div class="page tss133 tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tss_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tss_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>旅顺龙头生态<br/>种植养殖基地</h3>
-              
-            </div>
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>旅顺龙头生态<br/>种植养殖基地</h3>
 
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+                    </div>
+
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">位于旅顺中路龙头镇，占地面积200余亩，原为龙头火车站货场，是铁路闲置土地开发实现资产保值增值的典范。基地以禽畜养殖、果蔬种植为主，常年供应绿色、安全肉、禽、蛋、果蔬产品30余万斤，在此基础上，配套开发特色列车餐饮服务，逐步打造产、供、销一体农业旅游服务链条。
                 </span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <div class="i-row clearfix">
-                  <div class="i-col width-1-5">
-                    <a href="images/tss13/i3.jpg" data-lightbox="lightbox" > <img  src="images/tss13/img13_03.png"> </a>
-                  </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tss13/i5.jpg" data-lightbox="lightbox" > <img  src="images/tss13/img13_05.png"> </a>
-                  </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tss13/i8.jpg" data-lightbox="lightbox" > <img  src="images/tss13/img13_08.png"> </a>
-                  </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tss13/i10.jpg" data-lightbox="lightbox" > <img  src="images/tss13/img13_10.png"> </a>
-                  </div>
-                  <div class="i-col width-1-5">
-                    <a href="images/tss13/i13.jpg" data-lightbox="lightbox" > <img  src="images/tss13/img13_13.png"> </a>
-                  </div>
+                        </p>
+                    </div>
                 </div>
-                <div>
-                  <a href="images/tss13/i20.jpg" data-lightbox="lightbox" > <img  src="images/tss13/img13_20.png"> </a>
-                </div>
-              </div>
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tss13/i20.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss13/i13.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss13/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss13/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss13/i8.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss13/i10.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tss13/i3.jpg">	</div>
-                </div>
-              </div>
-            </div>
-          </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
 
+                            <div class="width-4-5" style=""> <!--左边60%-->
+                                <div class="height-1-4"> <!--左边上25%-->
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss13/i8.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss13/img13_08.png" class="img-fullh"
+                                                style=""></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss13/i10.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss13/img13_10.png" class="img-fullh"
+                                                style="width-1-4"></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;"> <!--左上3列-->
+                                        <a href="images/tss13/i13.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss13/img13_13.png" class="img-fullh"
+                                                style="width-1-4"></a>
+                                    </div>
+                                    <div class="width-1-4" style="padding:0 8px 8px 0;">
+                                        <a href="images/tss13/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss13/img13_03.png" class="img-fullh"
+                                                style="width-1-4 float: right;"></a>
+                                    </div>
+                                </div>
+                                <div class="height-3-4" style="padding:0 8px 0 0;"> <!--左边下75%-->
+                                    <a href="images/tss13/i20.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss13/i20.jpg" class=""
+                                            style=" "></a>
+                                </div>
+                            </div>
+
+                            <div class="width-1-5" style=""> <!--右边20%-->
+                                <div class="height-1-4" style="padding:0 0 8px 0;">  <!--右第一行-->
+                                    <a href="images/tss13/i5.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss13/img13_05.png" class="img-fullh"
+                                            style=" "></a>
+                                </div>
+                                <div class="height-1-4" style="padding:0;">  <!--右第一行-->
+                                    <!--<a href="images/tss13/i8.jpg" data-lightbox="lightbox"><img-->
+                                    <!--src="./images/tss13/i8.jpg" class="img-fullh"-->
+                                    <!--style=" "></a>-->
+
+                                    <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                        没有<br>图片
+                                    </div></span>
+
+                                </div>
+                                <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
+                                    <!--<a href="images/tss13/i9.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss13/i9.jpg" class=" img-fullh"-->
+                                            <!--style=""></a>-->
+                                    <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+
+                                </div>
+                                <div class="height-1-4" style="padding:8px 0 0 0;">  <!--右第一行-->
+                                    <!--<a href="images/tss13/i7.jpg" data-lightbox="lightbox"><img-->
+                                            <!--src="./images/tss13/i7.jpg" class="img-fullh"-->
+                                            <!--style=""></a>-->
+                                    <span style="font-family:Microsoft YaHei; font-size:40px; color: #D61518">
+                                        <div style="background:url('./images/tss13/img13_05.png')/* no-repeat*/;height: 100%; width: 90%;">
+                                            没有<br>图片
+                                        </div></span>
+
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tss133/i13.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss133/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss133/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss133/i8.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss133/i10.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss133/i3.jpg"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-      </div>
     </div>
 
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/tss/旅顺.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/tss/旅顺.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
-    <video class="video-js vjs-hidden" data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
-      <source src="videos/龙头生态园.webm" type="video/webm"/>
+    <video class="video-js vjs-hidden"
+           data-setup='{"controls": true, "autoplay": false, "preload": "auto", "fluid": true}'>
+        <source src="videos/龙头生态园.webm" type="video/webm"/>
     </video>
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
